--- a/content/pages/about/index.mdx
+++ b/content/pages/about/index.mdx
@@ -1,8 +1,6 @@
 ---
 title: About
-slug: "/about"
+slug: '/about'
 ---
 
-Hi!
-
-I'm LekoArts, a designer turned software engineer passionate about open source & teaching. Learn more about Gatsby & React on [my website](https://www.lekoarts.de?utm_source=minimal-blog&utm_medium=Starter).
+Hi! It's a Huinno Aim Tech Blog!
