--- a/content/posts/upload_test/index.mdx
+++ b/content/posts/upload_test/index.mdx
@@ -1,11 +1,7 @@
 ---
-title: Introduction to "Defence against the Dark Arts"
+title: Test_sb
 date: 2023-01-05
-description: Defence Against the Dark Arts (abbreviated as DADA) is a subject taught at Hogwarts School of Witchcraft and Wizardry and Ilvermorny School of Witchcraft and Wizardry.
-defer: false
-tags:
-  - Tutorial
-  - Dark Arts
+slug: "/normal-text-override"
 banner: ./boom.jpg
 canonicalUrl: https://random-blog-about-curses.com/curses-counter-curses-and-more
 ---
