--- a/content/posts/upload_test/index.mdx
+++ b/content/posts/upload_test/index.mdx
@@ -1,7 +1,7 @@
 ---
 title: Test_sb
 date: 2023-01-05
-slug: "/normal-text-override"
+slug: "/test-text-override"
 banner: ./boom.jpg
 canonicalUrl: https://random-blog-about-curses.com/curses-counter-curses-and-more
 ---
